# PlayFabForRoblox

./: .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .npmignore  CODE_OF_CONDUCT.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  foreman.toml  mkdocs.yml  package-lock.json  package.json  rotriever.toml  tsconfig.json  wally.toml
docs/: index.md  install.md
example/: .gitignore  README.md  default.project.json  example.rbxl  sourcemap.json  stylua.toml  wally.toml
generator/: Cargo.toml  README.md
generator/src/: domain.rs  main.rs  playfab_api.rs  util.rs
generator/src/api_generator/: codegen.rs  mod.rs
internal/: README.md  init.lua  wally.toml
lua/: AdminApi.lua  AuthenticationApi.lua  ClientApi.lua  DataApi.lua  EventsApi.lua  ExperimentationApi.lua  GroupsApi.lua  HTTP.lua  MultiplayerApi.lua  PlayFab.lua  ProfilesApi.lua  Promise.lua  ServerApi.lua  Settings.lua  TS.lua  init.lua
src/: AdminApi.d.ts  AdminApi.ts  AdminApiTypes.d.ts  AuthenticationApi.ts  AuthenticationApiTypes.d.ts  ClientApi.ts  ClientApiTypes.d.ts  DataApi.ts  DataApiTypes.d.ts  EventsApi.d.ts  EventsApi.ts  EventsApiTypes.d.ts  ExperimentationApi.d.ts  ExperimentationApi.ts  ExperimentationApiTypes.d.ts  GroupsApi.ts  GroupsApiTypes.d.ts  HTTP.ts  IPlayFabHttps.lua  MultiplayerApi.ts  MultiplayerApiTypes.d.ts  PlayFab.d.ts  PlayFab.ts  PlayFabAdmin.d.ts  PlayFabAdmin.lua  PlayFabAuthentication.d.ts  PlayFabAuthentication.lua  PlayFabClient.d.ts  PlayFabClient.lua  PlayFabCloudScript.d.ts  PlayFabCloudScript.lua  PlayFabData.d.ts  PlayFabData.lua  (+29 more)
(+100 files in other folders)
