[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
clap = "3.2.22"
clap-verbosity-flag = "1.0.1"
console = "0.15.1"
convert_case = "0.6.0"
derive_more = "0.99.17"
env_logger = "0.9.1"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
toml = "0.5.9"
